tests/dataset/tpc-ds/compiler/pl/q94.error
run: exit status 2
ERROR: /tmp/q94.pl:89: user:main '<meta-call>'/1: Unknown procedure: exists/2
